	(tinydebian-:gnu-bts-url-http-bugs): New.
	(tinydebian-bug-gnu-emacs-bts-gnus-summary-line-p): Correct regexp.
	(tinydebian-bug-bts-type-determine): Detect GNU BTS.
	(tinydebian-bug-ask-bts-and-number): Add GNU BTS.
	(tinydebian-bts-url-bug-compose): Add GNU BTS.
	(tinydebian-bug-url-forward): Add check for Debian context.
	(tinydebian-bug-url-forward): Add GNU BTS. Clean MIME "3D" from URL.

2010-06-02 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydesk.el: Adjust documentation a little.

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-owner): New user
	command.
	(tinydebian-bts-mail-ctrl-notfixed): Adjust interactive message.

2010-05-24 Mon  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-parse-string-1): Delete
	trailing ")" that usually appear in returned BTS messages.
	(tinydebian-bts-mail-type-rfp): Add support for direct ITP.

2010-05-23 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-nbr-at-current-point-hash):
	check that word contains hash.

2010-05-09 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-type-it-nmu): Correct
	email address in parameter to `tinydebian-bts-mail-type-macro'.
	(tinydebian-bts-mail-type-it-nmu): Use
	`tinydebian-:bts-mail-type-it-nmu-message' and
	`tinydebian-bts-mail-type-it-nmu-hook'
	(tinydebian-bts-mail-type-it-nmu): chnage Subject to use '--' not
	parentheses because Debian BTS server returns confirmation also on
	parenheses; they would double.

2010-05-08 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-debian-url-bug-initialize-p): Check
	error condition.
	(tinydebian-debian-parse-bts-bug-package): Fix case, when there is no colon
	in package name.

2010-05-08 Sat  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-nbr-string): Read plain NUMBER.
	(tinydebian-debian-parse-bts-bug-title): Remove cryft.
	(tinydebian-date-to-iso8691): Add `stringp' test.
